flatMap concurrency fix